# penai

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  PENPOT.md  README.md  config.json  docker_build_and_run.sh  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: lint_and_docs.yaml  publish.yaml  pytest.yml  windows_mac_test.yml
docs/: _config.yml  autogen_rst.py  index.rst
docs/02_notebooks/: 00_intro.md  01_design_elements_to_text.ipynb  01_library_example.ipynb  01_working_with_penai.ipynb  02_config_example.ipynb  02_design_elements_to_text.ipynb  02_hierarchy_generation.ipynb  02_svg_variations.ipynb
docs/04_contributing/: 04_contributing.rst
notebooks/: hierarchy_inference.ipynb  shape_name_generation.ipynb  svg_variation_transfer_ui_widget.ipynb  svg_variations_demo.ipynb  svg_variations_icon.ipynb  svg_variations_ui_widget.ipynb
plugins/: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
plugins/public/: manifest.json
plugins/src/: main.ts  plugin.ts  style.css
resources/: hierarchy.html
resources/jinja_templates/: hierarchy.html  index.html  svg_variations_index.html
resources/static_html/: style.css
resources/styles/: prompt_visualizer.css
scripts/: .gitignore  api.py  batch_svg_variation_transfer.py  batch_svg_variations.py  create_variations_from_registry.py  download-google-fonts.sh  download.py  multimodal_query.py  penpot_client_demo.py  penpot_xml_demo.py  plugin_backend_service.py  pull_all_data.py  pull_data.py  push_all_data.py  push_data.py  run_sample.py  svg_variations_demo.py  web_server.py
src/penai/: client.py  config.py  constants.py  errors.py  hierarchy_inspection.py  loaders.py  loading.py  models.py  registries.py  render.py  sample_module.py  schemas.py  svg.py  types.py  utils.py  vlm_hosts.py  xml.py
src/penai/hierarchy_generation/: inference.py  utils.py  vis.py
src/penai/llm/: conversation.py  llm_model.py  prompting.py  utils.py
src/penai/registries/: projects.py  shapes.py  variation_transfer_tasks.py  web_drivers.py
src/penai/shape_name_generation/: inference.py
src/penai/utils/: __init__.py  argparse.py  datastruct.py  dict.py  fonts.py  io.py  ipython.py  misc.py  plotting.py  svg.py  vis.py  web_drivers.py
src/penai/variations/: svg_variations.py  xml_variations.py
src/penpy/: render.py
test/penai/: conftest.py  test_loading.py  test_registries.py  test_render.py  test_renderers.py  test_sample_class.py  test_server_interaction.py  test_svg.py  test_svg_variations.py
test/penpy/: conftest.py  test_renderer.py  test_renderers.py
test/resources/: evaluation_data.json
